Closed
Bug 1918838
Opened 1 year ago
Closed 1 year ago
CSS Zoom does not apply to input[type="checkbox"], input[type="radio"]
Categories
(Core :: CSS Parsing and Computation, defect, P3)
Tracking
()
RESOLVED
FIXED
132 Branch
| Tracking | Status | |
|---|---|---|
| firefox132 | --- | fixed |
People
(Reporter: eliasjmason, Assigned: emilio)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:130.0) Gecko/20100101 Firefox/130.0
Steps to reproduce:
I created a webpage with checkbox and radio elements and applied the CSS zoom property to them.
For a simple repro, please see this CodePen: https://codepen.io/mxmason/pen/PorgMqd?editors=1010
Actual results:
Zoom had no effect in Firefox, but worked as expected in Chrome and Safari.
This may be related to https://bugzilla.mozilla.org/show_bug.cgi?id=390936, which was recently closed.
Expected results:
Zoom should work predictably on these elements to match other implementations – especially on these elements, which are difficult to customize, leading authors to recreate checkbox and radio widgets from scratch.
Component: Untriaged → CSS Parsing and Computation
OS: Unspecified → macOS
Product: Firefox → Core
Hardware: Unspecified → ARM64
| Assignee | ||
Updated•1 year ago
|
Flags: needinfo?(emilio)
| Assignee | ||
Updated•1 year ago
|
Assignee: nobody → emilio
Severity: -- → S3
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P3
| Assignee | ||
Comment 1•1 year ago
|
||
| Assignee | ||
Updated•1 year ago
|
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4b595e1843aa
Make CSS zoom apply to themed widgets properly. r=dshin
Comment 3•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox132:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/48276 for changes under testing/web-platform/tests
Upstream PR merged by moz-wptsync-bot
You need to log in
before you can comment on or make changes to this bug.
Description
•