Bug 1918838 - Make CSS zoom apply to themed widgets properly. r=dshin

Differential Revision: https://phabricator.services.mozilla.com/D222320